@@ -1,6 +1,5 @@
 package dk.kvalitetsit.hjemmebehandling.service;
 
-import dk.kvalitetsit.hjemmebehandling.api.PlanDefinitionDto;
 import dk.kvalitetsit.hjemmebehandling.constants.QuestionnaireStatus;
 import dk.kvalitetsit.hjemmebehandling.constants.Systems;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
@@ -21,10 +20,9 @@ import org.slf4j.LoggerFactory;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class QuestionnaireService extends AccessValidatingService {
-    private static final Logger logger = LoggerFactory.getLogger(QuestionnaireResponseService.class);
+    private static final Logger logger = LoggerFactory.getLogger(QuestionnaireService.class);
 
     private final FhirClient fhirClient;
 
@@ -40,7 +38,7 @@ public class QuestionnaireService extends AccessValidatingService {
         FhirLookupResult lookupResult = fhirClient.lookupQuestionnairesById(List.of(questionnaireId));
 
         Optional<Questionnaire> questionnaire = lookupResult.getQuestionnaire(questionnaireId);
-        if(questionnaire.isEmpty()) {
+        if (questionnaire.isEmpty()) {
             return Optional.empty();
         }
 
@@ -55,7 +53,7 @@ public class QuestionnaireService extends AccessValidatingService {
     public List<QuestionnaireModel> getQuestionnaires(Collection<String> statusesToInclude) throws ServiceException {
         FhirLookupResult lookupResult = fhirClient.lookupQuestionnairesByStatus(statusesToInclude);
 
-        return lookupResult.getQuestionnaires().stream().map(fhirMapper::mapQuestionnaire).collect(Collectors.toList());
+        return lookupResult.getQuestionnaires().stream().map(fhirMapper::mapQuestionnaire).toList();
     }
 
     public String createQuestionnaire(QuestionnaireModel questionnaire) throws ServiceException {
@@ -73,7 +71,7 @@ public class QuestionnaireService extends AccessValidatingService {
 
         // add unique id to question(s) and call-to-action.
         if (questionnaire.getQuestions() != null) {
-            questionnaire.getQuestions().stream().filter(q -> q.getLinkId()==null).forEach(q -> q.setLinkId(IdType.newRandomUuid().getValueAsString()));
+            questionnaire.getQuestions().stream().filter(q -> q.getLinkId() == null).forEach(q -> q.setLinkId(IdType.newRandomUuid().getValueAsString()));
         }
         if (questionnaire.getCallToAction() != null) {
             questionnaire.getCallToAction().setLinkId(Systems.CALL_TO_ACTION_LINK_ID);
@@ -84,7 +82,7 @@ public class QuestionnaireService extends AccessValidatingService {
 
         // Look up the Questionnaire, throw an exception in case it does not exist.
         FhirLookupResult lookupResult = fhirClient.lookupQuestionnairesById(List.of(questionnaireId));
-        if(lookupResult.getQuestionnaires().size() != 1 || lookupResult.getQuestionnaire(questionnaireId).isEmpty()) {
+        if (lookupResult.getQuestionnaires().size() != 1 || lookupResult.getQuestionnaire(questionnaireId).isEmpty()) {
             throw new ServiceException(String.format("Could not lookup questionnaire with id %s!", questionnaireId), ErrorKind.BAD_REQUEST, ErrorDetails.QUESTIONNAIRE_DOES_NOT_EXIST);
         }
         Questionnaire questionnaire = lookupResult.getQuestionnaire(questionnaireId).get();
@@ -105,7 +103,7 @@ public class QuestionnaireService extends AccessValidatingService {
 
     private void updateQuestionnaireModel(QuestionnaireModel questionnaireModel, String updatedTitle, String updatedDescription, String updatedStatus, List<QuestionModel> updatedQuestions, QuestionModel updatedCallToAction) {
         // make sure all question(s) and call-to-action has a unique id
-        updatedQuestions.stream().filter(q -> q.getLinkId()==null).forEach(q -> q.setLinkId(IdType.newRandomUuid().getValueAsString()));
+        updatedQuestions.stream().filter(q -> q.getLinkId() == null).forEach(q -> q.setLinkId(IdType.newRandomUuid().getValueAsString()));
         if (updatedCallToAction.getLinkId() == null) {
             updatedCallToAction.setLinkId(Systems.CALL_TO_ACTION_LINK_ID);
         }
@@ -118,18 +116,11 @@ public class QuestionnaireService extends AccessValidatingService {
     }
 
     private void validateStatusChangeIsLegal(Questionnaire questionnaire, String updatedStatus) throws ServiceException {
-        List<Enumerations.PublicationStatus> validStatuses;
-        switch (questionnaire.getStatus()) {
-            case ACTIVE:
-                validStatuses = List.of(Enumerations.PublicationStatus.ACTIVE, Enumerations.PublicationStatus.RETIRED);
-                break;
-            case DRAFT:
-                validStatuses = List.of(Enumerations.PublicationStatus.DRAFT, Enumerations.PublicationStatus.ACTIVE);
-                break;
-            default:
-                validStatuses = List.of();
-                break;
-        }
+        List<Enumerations.PublicationStatus> validStatuses = switch (questionnaire.getStatus()) {
+            case ACTIVE -> List.of(Enumerations.PublicationStatus.ACTIVE, Enumerations.PublicationStatus.RETIRED);
+            case DRAFT -> List.of(Enumerations.PublicationStatus.DRAFT, Enumerations.PublicationStatus.ACTIVE);
+            default -> List.of();
+        };
 
         if (!validStatuses.contains(Enumerations.PublicationStatus.valueOf(updatedStatus))) {
             throw new ServiceException(String.format("Could not change status for questionnaire with id %s!", questionnaire.getId()), ErrorKind.BAD_REQUEST, ErrorDetails.QUESTIONNAIRE_DOES_NOT_EXIST);
@@ -141,7 +132,7 @@ public class QuestionnaireService extends AccessValidatingService {
         FhirLookupResult lookupResult = fhirClient.lookupQuestionnairesById(List.of(qualifiedId));
 
         Optional<Questionnaire> questionnaire = lookupResult.getQuestionnaire(qualifiedId);
-        if (!questionnaire.isPresent()) {
+        if (questionnaire.isEmpty()) {
             throw new ServiceException(String.format("Could not lookup questionnaire with id %s!", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.QUESTIONNAIRE_DOES_NOT_EXIST);
         }
 
@@ -160,11 +151,11 @@ public class QuestionnaireService extends AccessValidatingService {
 
         FhirLookupResult lookupResult = fhirClient.lookupQuestionnairesById(List.of(qualifiedId));
 
-        if(lookupResult.getQuestionnaires().isEmpty()) {
+        if (lookupResult.getQuestionnaires().isEmpty()) {
             throw new ServiceException(String.format("Could not find questionnaires with tht requested id: %s", qualifiedId), ErrorKind.BAD_REQUEST, ErrorDetails.QUESTIONNAIRE_DOES_NOT_EXIST);
         }
 
         lookupResult.merge(fhirClient.lookupActivePlanDefinitionsUsingQuestionnaireWithId(qualifiedId));
         return lookupResult.getPlanDefinitions();
-}
+    }
 }
